# pd_code_for_prime_link_and_knot

./: README.md  pyproject.toml
data/pd_code/: all_mirror_prime_link.txt  all_non_mirror_prime_knot.txt  all_non_mirror_prime_link.txt
prime_link_knot_10/: __init__.py  main.py
prime_link_knot_10/data/amphicheiral/: knots.txt
prime_link_knot_10/data/components/: all_mirror_prime_knot.txt  all_mirror_prime_link.txt  all_non_mirror_prime_knot.txt  all_non_mirror_prime_link.txt
prime_link_knot_10/data/pd_code/: all_mirror_prime_knot.txt
tests/: test_catalogue.py
