[project]
name = "prime-link-knot-10"
version = "0.0.2"
description = "table for prime link and knot under 10 crossing."
authors = [
    {name = "GGN_2015",email = "premierbob@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "link-rep"
]
include = [
    {path = "prime_link_knot_10/data", format = "sdist"},
    {path = "prime_link_knot_10/data", format = "wheel"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"